--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-RESEND_API_KEY=re_2CF2gpgh_3QQJa4xFCgMTcMpKQtcoWCLH
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=agithinji020@gmail.com
+SMTP_PASS=sypx kqpj kodj azeg
