--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.447.0",
     "next": "^14.2.14",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^4.0.0",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
