--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=buildwithannie@gmail.com
-SMTP_PASS=jyld qzrb sbgt xphw
+SMTP_USER=buildwithanie@gmail.com
+SMTP_PASS=zgfl lxkk cvqb oczz
